syntax = "proto3";

package zing;

option go_package = "github.com/djcopley/zing/api";

import "google/protobuf/timestamp.proto";
import "api/user.proto";

message Message {
  MessageMetadata metadata = 1;
  string content = 2;
}

message MessageMetadata {
  string id = 1;
  User to = 2;
  User from = 3;
  google.protobuf.Timestamp timestamp = 4;
}
